<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_subheaderUno"
        android:title="@string/lbl_consultar_info_medica" >
    <menu>
        <item
            android:id="@+id/menu_autorizaciones"
            android:icon="@mipmap/autorizaciones"
            android:title="@string/lbl_autorizaciones"/>
        <item
            android:id="@+id/menu_servicio_asistencial"
            android:icon="@mipmap/asistenciales"
            android:title="@string/lbl_servicio_asistencial"/>
        <item
            android:id="@+id/menu_informes_medicos"
            android:icon="@mipmap/infomedicos"
            android:title="@string/lbl_informes_medicos"/>
        <item
            android:id="@+id/menu_documentos_medicos"
            android:icon="@mipmap/docmedicos"
            android:title="@string/lbl_documentos_medicos"/>
        <item
            android:id="@+id/menu_bitacoras"
            android:icon="@mipmap/bitacoras"
            android:title="@string/lbl_bitacoras"/>
        <item
            android:id="@+id/menu_epicrisis"
            android:icon="@mipmap/epicrisis"
            android:title="@string/lbl_epicrisis"/>

        <item
            android:id="@+id/menu_procedimientos_adicionales"
            android:icon="@mipmap/procedimientos"
            android:title="@string/lbl_procedimientos_adicionales"/>
        <item
            android:id="@+id/menu_funcionarios_externos"
            android:icon="@mipmap/citas"
            android:title="@string/lbl_funcionarios_externos"/>
        <item
            android:id="@+id/menu_consultar_solicitudes_aprobacion"
            android:icon="@mipmap/aprobacion"
            android:title="@string/lbl_consultar_solicitudes_aprobacion"/>

    </menu>
    </item>

    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/lbl_consultar_info_logistica">
        <menu>
            <item
                android:id="@+id/menu_servicio_no_asistencial"
                android:icon="@mipmap/noasistenciales"
                android:title="@string/lbl_servicio_no_asistencial"/>
            <item
                android:id="@+id/menu_giro"
                android:icon="@mipmap/giros"
                android:title="@string/lbl_titulo_giro"/>
            <item
                android:id="@+id/menu_nota_credito_giro"
                android:icon="@mipmap/creditogiros"
                android:title="@string/lbl_titulo_nota_credito_giro"/>
            <item
                android:id="@+id/menu_lbl_titulo_facturafactura"
                android:icon="@mipmap/facturas"
                android:title="@string/lbl_titulo_factura"/>
            <item
                android:id="@+id/menu_notas_credito_debito"
                android:icon="@mipmap/debitocredito"
                android:title="@string/lbl_titulo_notas_credito_debito"/>
            <item
                android:id="@+id/menu_utilizaciones"
                android:icon="@mipmap/utilizacion"
                android:title="@string/lbl_titulo_utilizaciones"/>
            <item
                android:id="@+id/menu_encuesta_satisfaccion"
                android:icon="@mipmap/encuesta"
                android:title="@string/lbl_titulo_encuesta_satisfaccion"/>
            <item
                android:id="@+id/menu_solicitudes_aprobacion_logistica"
                android:icon="@mipmap/aprobacion"
                android:title="@string/lbl_consultar_solicitudes_aprobacion"/>
            <item
                android:id="@+id/menu_bitacoras_logistica"
                android:icon="@mipmap/bitacoras"
                android:title="@string/lbl_bitacoras"/>
        </menu>
    </item>
</menu>