<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0,1"
        android:shrinkColumns="0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_descripcion"
                        android:textStyle="bold"
                        android:textColor="@color/colorTextTitle"
                        android:textSize="@dimen/font_size_subtitle"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/lbl_numero_nota"
                        android:textSize="@dimen/font_size_text"
                        android:id="@+id/txtDescripcion"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginBottom="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_ciudad"
                        android:textStyle="bold"
                        android:textColor="@color/colorTextTitle"
                        android:textSize="@dimen/font_size_subtitle"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/lbl_numero_factura"
                        android:textSize="@dimen/font_size_text"
                        android:id="@+id/txtCiudad"
                        android:layout_marginLeft="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_tipo_solicitud"
                        android:textStyle="bold"
                        android:textColor="@color/colorTextTitle"
                        android:textSize="@dimen/font_size_subtitle"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/lbl_fecha_expedicion"
                        android:textSize="@dimen/font_size_text"
                        android:id="@+id/txtTipoSolicitud"
                        android:layout_marginLeft="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_fecha_solicitud"
                        android:textStyle="bold"
                        android:textColor="@color/colorTextTitle"
                        android:textSize="@dimen/font_size_subtitle"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/lbl_fecha_aprobacion"
                        android:textSize="@dimen/font_size_text"
                        android:id="@+id/txtFechaSolicitud"
                        android:layout_marginLeft="10dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_estado"
                        android:textStyle="bold"
                        android:textColor="@color/colorTextTitle"
                        android:textSize="@dimen/font_size_subtitle"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/lbl_fecha_aprobacion"
                        android:textSize="@dimen/font_size_text"
                        android:id="@+id/txtEstado"
                        android:layout_marginLeft="10dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_fecha_aprobacion"
                        android:textStyle="bold"
                        android:textColor="@color/colorTextTitle"
                        android:textSize="@dimen/font_size_subtitle"
                        android:layout_marginLeft="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/lbl_fecha_aprobacion"
                        android:textSize="@dimen/font_size_text"
                        android:id="@+id/txtFechaAprobacion"
                        android:layout_marginLeft="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_fecha_rechazo"
                        android:textStyle="bold"
                        android:textColor="@color/colorTextTitle"
                        android:textSize="@dimen/font_size_subtitle"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/lbl_fecha_aprobacion"
                        android:textSize="@dimen/font_size_text"
                        android:id="@+id/txtFechaRechazo"
                        android:layout_marginLeft="10dp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView7"
                    android:src="@mipmap/icon_siguiente"
                    android:layout_gravity="right"
                    android:layout_marginRight="5dp"
                    android:tint="@color/colorPrimary" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>
