<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_area_medica"
            android:textStyle="bold"
            android:textColor="@color/colorTextTitle"
            android:textSize="@dimen/font_size_subtitle"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Juan Camilo Puente Riascos"
            android:textSize="@dimen/font_size_text"
            android:id="@+id/textFuncionarioExterno"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_fecha_cita"
            android:textStyle="bold"
            android:textColor="@color/colorTextTitle"
            android:textSize="@dimen/font_size_subtitle"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="12/12/2016 08:30 pm"
            android:textSize="@dimen/font_size_text"
            android:id="@+id/textFechaHoraCita"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_medico"
            android:textStyle="bold"
            android:textColor="@color/colorTextTitle"
            android:textSize="@dimen/font_size_subtitle"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Juan Camilo Puente Riascos"
            android:textSize="@dimen/font_size_text"
            android:id="@+id/textMedico"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_especialidad"
            android:textStyle="bold"
            android:textColor="@color/colorTextTitle"
            android:textSize="@dimen/font_size_subtitle"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Juan Camilo Puente Riascos"
            android:textSize="@dimen/font_size_text"
            android:id="@+id/textEspecialidad"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>


</LinearLayout>
